--- a/cssfiles/themes.css
+++ b/cssfiles/themes.css
@@ -39,3 +39,12 @@ body{
     transition: 0.8s;
   }
   
+@media (max-width:700px){
+  .navbar{
+    display: flex;
+    flex-direction: column;
+    font-size: 100%;
+    overflow:hidden;
+    position:static;
+  }
+}
